cli/tests/default/e2e/snapshots/test_rule_validation/test_validation_of_invalid_rules/rulesinvalid-rulesmissing-hyphen.yaml/results.txt
Configuration is invalid - found 1 configuration error(s), and 0 rule(s).
[ERROR] Rule parse error in rule eqeq:
 Expected object with only one entry -- did you forget a hyphen?
  --> rules/invalid-rules/missing-hyphen.yaml:4
   2 | - id: eqeq
   3 |   patterns:
   4 |     - pattern: |
     |       ^
   5 |         foo
   6 |       pattern-not: |
